alphabetized CSS classes for app, fixed line spacing and font sizes, made standard sizing and colour for all of certian tags in app, added a button to projects section that links to github

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,12 +1,12 @@
 footer {
-    text-align: center;
+    color: white;
     display: flex;
+    font-family: "Anek Latin", sans-serif;
+    font-size: large;
     flex-direction: column;
     margin: auto;
-    color: white;
-    font-size: large;
+    text-align: center;
     width: 500px;
-    font-family: "Anek Latin", sans-serif;
 }
 
 .icons {
@@ -52,4 +52,5 @@ footer {
 .linksText > p {
     font-size: small;
     margin-top: 30px;
+    padding-bottom: 100px;
 }
