--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -16,15 +16,9 @@
 }
 
 .content {
-    color: #636363;
     display: flex;
     flex-direction: column;
-    font-family: "Anek Latin", sans-serif;
     width: 512px;
-}
-
-.content > header > h2 {
-    font-size: 50px;
 }
 
 .content > p {
