--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
     background-image: linear-gradient(#8968ac, #f99ef4);
     width: 1200px;
     margin: auto;
+    font-family: "Anek Latin", sans-serif;
+    color: #636363;
 }
 
 .contentWrapper {
@@ -15,4 +17,17 @@ body {
     height: 3px;
     margin: auto;
     width: 200px;
+}
+
+p {
+    font-size: large;
+    font-weight: 400;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 36px;
 }
